<resources>
    <string name="app_name">ALP_COFFEE</string>
    <string name="menu">Menu</string>
    <string name="name">Name:</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="profile">Profile</string>
    <string name="log_out">log out</string>
    <string name="todo">TODO</string>
    <string name="search">Search name of drink</string>

    <string name="name01">Name</string>
    <string name="price01">Price</string>
    <string name="purchase">Purchase</string>
    <string name="payment">Payment</string>
    <string name="search_your_adress">Search your Adress</string>
    <string name="type_your_adress">Type Your Adress</string>
    <string name="todoCheck">TODO</string>
    <string name="success">Success</string>
    <string name="ok">OK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news">News</string>
    <string name="todonew">TODO</string>
    <string name="todobest">TODO</string>
    <string name="todobrach">TODO</string>
    <string name="pay_up">Pay Up</string>
    <string name="todoPre">TODO</string>
    <string name="todopre">TODO</string>
    <string name="action_search">search</string>
    <string name="add_to_cart">Add to Cart</string>

</resources>