<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newsAcv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EABFCC">

    <Button
        android:id="@+id/profileBtn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:backgroundTint="#4EBAE8"

        android:text="@string/profile"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/menuBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menuBtn"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/menuBtn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#4EBAE8"

        android:text="@string/menu"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/newsBtn"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toEndOf="@+id/profileBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/newsBtn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#4EBAE8"
        android:text="@string/news"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/menuBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menuBtn"
        app:layout_constraintVertical_bias="0.0" />
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/todonew"
        android:src="@drawable/group_16"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/todobrach"
        android:src="@drawable/group_17"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todobest"
        android:src="@drawable/group_5__1_"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/petrona"
        android:text="@string/news"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>