<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileAcv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EABFCC">

    <TextView
        android:id="@+id/Email"
        android:layout_width="195dp"
        android:layout_height="26dp"
        android:layout_marginStart="40dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/Phone"
        android:layout_width="195dp"
        android:layout_height="26dp"
        android:layout_marginStart="36dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/profileBtn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:backgroundTint="#4EBAE8"
        android:onClick="buttonProfile"
        android:text="@string/profile"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/menuBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menuBtn"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/menuBtn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#4EBAE8"
        android:onClick="buttonMenu"
        android:text="@string/menu"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/newsBtn"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toEndOf="@+id/profileBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/newsBtn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#4EBAE8"
        android:onClick="buttonNews"
        android:text="@string/news"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/menuBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menuBtn"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:fontFamily="@font/judson"
        android:text="@string/phone"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/judson"
        android:text="@string/name"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:fontFamily="@font/judson"
        android:text="@string/email"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/group_3__1_"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:fontFamily="@font/pridi_extralight"
        android:text="@string/profile"
        android:textColor="#2F48CB"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="276dp"
        android:backgroundTint="#B4C4EC"
        android:fontFamily="@font/oxanium"
        android:text="@string/log_out"
        android:textColor="#7B1FA2"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="195dp"
        android:layout_height="26dp"
        android:layout_marginStart="40dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>