<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuAcv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EABFCC">

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/vien"
        android:ems="10"
        android:hint="@string/search"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        app:layout_constraintEnd_toEndOf="@+id/newsBtn"
        app:layout_constraintStart_toStartOf="@+id/profileBtn"
        app:layout_constraintTop_toBottomOf="@+id/menuBtn" />

    <Button
        android:id="@+id/profileBtn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:backgroundTint="#4EBAE8"
        android:onClick="buttonProfile"
        android:text="@string/profile"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/menuBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menuBtn"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/menuBtn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#4EBAE8"
        android:onClick="buttonMenu"
        android:text="@string/menu"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/newsBtn"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toEndOf="@+id/profileBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/newsBtn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#4EBAE8"
        android:onClick="buttonNews"
        android:text="@string/news"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/menuBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menuBtn"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvC"
        android:layout_width="322dp"
        android:layout_height="386dp"
        android:layout_marginTop="2dp"

        android:background="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <ImageButton
        android:id="@+id/purchaseBtn"
        android:layout_width="309dp"
        android:layout_height="61dp"

        android:layout_gravity="start"
        android:layout_marginTop="56dp"
        android:backgroundTint="#69CA90"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="@+id/rvC"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="@+id/rvC"
        app:layout_constraintTop_toBottomOf="@+id/rvC"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/purchaseBtn"
        app:layout_constraintStart_toStartOf="@+id/purchaseBtn"
        app:layout_constraintTop_toTopOf="@+id/purchaseBtn"
        app:layout_constraintVertical_bias="0.518"
        app:srcCompat="@drawable/shopping_cart_1" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:fontFamily="@font/judson"
        android:text="@string/purchase"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/imageView8"
        app:layout_constraintVertical_bias="0.533" />


</androidx.constraintlayout.widget.ConstraintLayout>