<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailCoffee"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EABFCC"
    tools:context=".CoffeeDetail">

    <View
        android:id="@+id/view"
        android:layout_width="352dp"
        android:layout_height="102dp"
        android:background="#FFFADF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367" />

    <ImageView
        android:id="@+id/imageViewCoffee"
        android:layout_width="69dp"
        android:layout_height="72dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:srcCompat="@mipmap/ic_launcher"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/abhaya_libre"
        android:text="@string/name01"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewCoffee"
        app:layout_constraintStart_toEndOf="@+id/imageViewCoffee"
        app:layout_constraintTop_toTopOf="@+id/imageViewCoffee"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/abhaya_libre"
        android:text="@string/price01"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewName"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />
    <Button
        android:id="@+id/toCartBtn"
        android:layout_width="156dp"
        android:layout_height="75dp"
        android:layout_marginTop="380dp"
        android:backgroundTint="#009688"
        android:text="Add to Cart"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="FoodDetail"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>