<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/payment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EABFCC">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/markazi_text"
        android:text="@string/payment"
        android:textColor="#2274A1"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:background="@drawable/vien"
        android:ems="10"
        android:hint="@string/type_your_adress"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#00838F"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/Search"
        app:layout_constraintEnd_toStartOf="@+id/Search"
        app:layout_constraintTop_toTopOf="@+id/Search"
        app:layout_constraintVertical_bias="0.55"
        app:srcCompat="@drawable/pin_1" />

    <Button
        android:id="@+id/btnTT"
        android:layout_width="228dp"
        android:layout_height="59dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#69CA90"
        android:fontFamily="@font/markazi_text"
        android:text="@string/pay_up"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@+id/rcVP"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="@+id/rcVP"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <ImageButton
        android:id="@+id/previousBtn"
        android:layout_width="146dp"
        android:layout_height="51dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#EABFCC"
        android:contentDescription="@string/todopre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="37dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/previousBtn"
        app:layout_constraintStart_toStartOf="@+id/previousBtn"
        app:layout_constraintTop_toTopOf="@+id/previousBtn"
        app:srcCompat="@drawable/previous_1" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="Previous"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/previousBtn"
        app:layout_constraintEnd_toEndOf="@+id/previousBtn"
        app:layout_constraintTop_toTopOf="@+id/previousBtn"
        app:layout_constraintVertical_bias="0.625" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcVP"
        android:layout_width="399dp"
        android:layout_height="306dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/Search"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/Search"
        app:layout_constraintTop_toBottomOf="@+id/Search" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="129dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="Tiền tạm tính: "
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rcVP" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="149dp"
        android:layout_height="44dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.252"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="117dp"
        android:layout_height="35dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="Tiền ship: "
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="148dp"
        android:layout_height="39dp"
        android:layout_marginStart="28dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="@+id/textView16"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="122dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:text="Tổng Tiền: "
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="229dp"
        android:layout_height="38dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_error"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toTopOf="@+id/textView18"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>